# cursor-wrapper

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  cursor  pyproject.toml  setup.py  test_installation.py
.specstory/history/: 2025-09-30_04-58Z-convert-monolithic-app-to-pipx-package.md
cursor_wrapper/: __init__.py  main.py
