[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-wrapper"
version = "1.1.0"
description = "A wrapper script for managing Cursor AppImage execution with logging and process management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
]

[project.scripts]
cursor = "cursor_wrapper.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cursor_wrapper*"]
